Fix navbar social link uneven spacing issue

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -101,6 +101,13 @@
         }
       }
 
+      i {
+        font-size: 1.7rem;
+        width: 1.7rem;
+        text-align: center;
+        margin-bottom: 0.5rem;
+      }
+
       i::before {
         color: var(--global-text-color);
         transition-property: all 0.2s ease-in-out;
